# RaspDeck3

./: .gitignore  README.md  pyproject.toml
config/examples/: default.conf
docs/: config.md  daemon.md  development.md  protocol.md
firmware/rp2040-zero/src/: main.ino
service/: raspdeck-daemon.service  raspdeck-tray.service
src/raspdeck/: __init__.py
src/raspdeck/cli/: main.py
src/raspdeck/core/: __init__.py  actions.py  config.py  display.py  notifications.py  serial_device.py
src/raspdeck/daemon/: main.py
src/raspdeck/tray/: __init__.py  main.py
tests/unit/: test_config.py  test_display.py
