[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raspdeck"
version = "0.1.0"
description = "RaspDeck control software."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyserial>=3.5",
]

[project.optional-dependencies]
daemon = [
  "pynput>=1.7",
]
tray = [
  "pillow>=10",
  "pystray>=0.19",
]
notifications = [
  "dbus-python>=1.3",
  "PyGObject>=3.46",
]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
rd-tool = "raspdeck.cli.main:main"
raspdeck-daemon = "raspdeck.daemon.main:main"
raspdeck-tray = "raspdeck.tray.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
